--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "GPL-2.0",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sync-request": "^6.1.0"
   }
 }
